Make sure paragraph spacing is less than header spacing

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -207,7 +207,7 @@ h3,
 h4,
 h5,
 h6 {
-  margin-bottom: 0.4rem;
+  margin-bottom: 0.75rem;
 }
 
 p:not(:last-child) {
