--- a/src/css/posts.css
+++ b/src/css/posts.css
@@ -20,7 +20,7 @@
 }
 
 .tmpl-post p {
-    margin-bottom: 0.85rem;
+    margin-bottom: 0.6rem;
 }
 
 details[open] p:last-child {
